--- a/package.json
+++ b/package.json
@@ -3,11 +3,5 @@
   "version": "1.0.0",
   "description": "URL-based placeholder image generator",
   "main": "index.html",
-  "type": "module",
-  "dependencies": {
-    "@vercel/og": "^0.6.2"
-  },
-  "engines": {
-    "node": "18.x"
-  }
+  "type": "module"
 }
