--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "placeholder-image-service",
-  "version": "1.0.0",
-  "description": "URL-based placeholder image generator",
-  "main": "index.html",
-  "type": "module"
+  "name": "placeholder-service",
+  "version": "1.0.0"
 }
